// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple radio mounted html should match snapshot 1`] = `
<div role="radiogroup" aria-labelledby="radio-group">
    <label id="radio-group" class="">
        Radio Group
    </label>
    <input type="radio" id="radio-1" name="radio-group" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2">
    <label id="label-radio-1" for="radio-1">
        Radio
    </label>
    <input type="radio" id="radio-2" name="radio-group" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2">
    <label id="label-radio-2" for="radio-2">
        Radio2
    </label>
</div>
`;

exports[`Multiple radio with all disabled mounted html should match snapshot 1`] = `
<div role="radiogroup" aria-labelledby="radio-group">
    <label id="radio-group" class="disabled">
        Radio Group
    </label>
    <input type="radio" id="radio-1" name="radio-group" disabled="disabled" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2">
    <label id="label-radio-1" for="radio-1">
        Radio
    </label>
    <input type="radio" id="radio-2" name="radio-group" disabled="disabled" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2">
    <label id="label-radio-2" for="radio-2">
        Radio2
    </label>
</div>
`;

exports[`Multiple radio with default mounted html should match snapshot 1`] = `
<div role="radiogroup" aria-labelledby="radio-group">
    <label id="radio-group" class="">
        Radio Group
    </label>
    <input type="radio" id="radio-1" name="radio-group" aria-checked="true" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2">
    <label id="label-radio-1" for="radio-1">
        Radio
    </label>
    <input type="radio" id="radio-2" name="radio-group" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2">
    <label id="label-radio-2" for="radio-2">
        Radio2
    </label>
</div>
`;

exports[`Multiple radio with disabled mounted html should match snapshot 1`] = `
<div role="radiogroup" aria-labelledby="radio-group">
    <label id="radio-group" class="">
        Radio Group
    </label>
    <input type="radio" id="radio-1" name="radio-group" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2">
    <label id="label-radio-1" for="radio-1">
        Radio
    </label>
    <input type="radio" id="radio-2" name="radio-group" disabled="disabled" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2">
    <label id="label-radio-2" for="radio-2">
        Radio2
    </label>
</div>
`;

exports[`Single radio mounted html should match snapshot 1`] = `
<div role="radiogroup" aria-labelledby="radio-group">
    <label id="radio-group" class="">
        Radio Group
    </label>
    <input type="radio" id="radio" name="radio-group" aria-labelledby="radio-group label-radio" aria-posinset="0" aria-setsize="1">
    <label id="label-radio" for="radio">
        Radio
    </label>
</div>
`;
